src/ja/2.5/manuals/export_import/menu_export_import.rst
.. _menu_export_import:

================================
メニューエクスポート・インポート
================================

はじめに
========

| 本書は、ITAのメニューエクスポート・インポートの機能および操作方法について説明します。

メニューエクスポート・インポートの概要
======================================

| 本章ではメニューエクスポート・インポートについて説明します。

メニューエクスポート・インポート
--------------------------------

機能について
^^^^^^^^^^^^

| メニューエクスポート・インポートは、移行したいITAのメニューを選択し、メニュー単位でデータを上書きで移行します。

.. figure:: /images/ja/export_import/overview/export_import_simple_diagram.png
  :width: 600px
  :align: center

モードについて
^^^^^^^^^^^^^^

| メニューエクスポート機能には2種類のモードがあります。

1. 環境移行

| 指定メニューのすべてのデータをエクスポートします。インポート先のデータをすべて置き換えます。

.. figure:: /images/ja/export_import/overview/environmental_transition_diagram.png
  :width: 600px
  :align: center

2. 時刻指定

| 指定時刻以降のデータのみエクスポートします。インポート先のデータと一意項目（ID、No等）が重複した場合はエクスポートしたデータが優先してインポートされます。

| 例：2023年1月2日 17:00を指定した場合

.. figure:: /images/ja/export_import/overview/time_designation_transition_diagram.png
  :width: 720px
  :align: center

3. 履歴

| エクスポート対象データの履歴データについて「履歴あり/履歴なし」を選択してエクスポートします。インポート先のデータと一意項目（ID、No等）が重複した場合はエクスポートしたデータが優先してインポートされます。

.. tabs::

   .. tab:: 履歴ありを指定した場合

     .. figure:: /images/ja/export_import/overview/jnl_1_diagram.drawio.png
       :width: 720px
       :align: center

   .. tab:: 履歴なしを指定した場合

     .. figure:: /images/ja/export_import/overview/jnl_2_diagram.drawio.png
       :width: 720px
       :align: center
 
使用例
^^^^^^

| 本機能ではワークスペースAとワークスペースBの2つの環境を使用して、以下のように機能を利用することを想定しています。

| **パターン①：環境の複製**

| ワークスペースAに登録されているすべてのデータをワークスペースBに複製します。

| [手順]

#. 環境移行モードにてワークスペースAのデータを環境移行モードですべてエクスポートします。
#. 1でエクスポートしたデータをワークスペースBにインポートします。

| ※環境移行後はワークスペースBでデータの登録・更新を行えます。その後、再度ワークスペースAからデータを移行すると不整合が発生する可能性があるため非推奨です。
| ※双方向でのデータの移行は、データの不整合が発生する可能性があるため非推奨です。

.. figure:: /images/ja/export_import/overview/environment_replication.png
  :width: 1000px
  :align: center

| **パターン②：データを投入するワークスペースと作業を実行するワークスペースを分ける**

| データの投入・テスト用ワークスペースと作業の実行のみを行う用のワークスペースの2点を用意する場合。

| [手順]

#. 環境移行モードにてワークスペースAのデータをすべてエクスポートします。
#. 1でエクスポートしたファイルをワークスペースBにインポートします。
#. ワークスペースAでデータの更新があるたびにワークスペースBに時刻指定モードで差分データを移行します。

| ※データ移行を複数行う前提の場合、ワークスペースBでデータの登録・更新を行うとデータの不整合が発生する可能性があるため非推奨です。作業の実行のみであれば影響はありません。
| ※ワークスペースBにて作業の実行中にデータを移行する際は、実行中のデータに影響を与えないようにするため、時刻指定モードで差分データのみを移行するようにしてください。
| ※双方向でのデータの移行は、データの不整合が発生する可能性があるため非推奨です。

.. figure:: /images/ja/export_import/overview/separate_servers.png
  :width: 1000px
  :align: center


エクスポート・インポートの環境による利用可否について
====================================================

環境差分（ITAのバージョン・インストールされているドライバ）について
-------------------------------------------------------------------

| エクスポートする環境と、インポートする環境で、環境差分（ITAのバージョン・インストールされているドライバ）がある場合の実行パターン、
| および、エクスポートしたKYMファイルの適用可能なITAの環境についてです。

.. warning::
   | KYMファイルについて、以下の条件を満たした場合、後方互換性があります。
   | ・2.5.0以降のバージョンのITAで、エクスポートしたKYMファイルであること
   | ・エクスポートしたITAのバージョンより、インポートするITAのバージョンが新しいこと
   | ・エクスポートしたITAにインストールされているドライバが、インポートするITAのドライバにインストールされていること


| 以下、環境Aでエクスポートを実施し、環境Bへインポートする場合を例に記載します。

.. _export_import_environment_and_drivers:

.. list-table:: エクスポート・インポートの環境による利用可否
   :header-rows: 1
   :align: left

   * - ケース
     - 環境Aのバージョン
     - 環境Aのドライバ
     - 環境Bのバージョン
     - 環境Bのドライバ
     - | 環境差分
       | (バージョン・ドライバ)
     - | 環境A→環境Bへ
       | インポート可否
     - 備考
   * - A
     - 2.5.X
     - | CI/CD for IaC 
       | OASE
     - 2.5.X
     - | CI/CD for IaC 
       | OASE
     - 環境差分なし
     - 〇
     - 
   * - B
     - 2.5.X
     - | CI/CD for IaC 
     - 2.5.X
     - | CI/CD for IaC 
       | OASE
     - ドライバ差分あり
     - 〇
     - 
   * - C
     - 2.5.X
     - | CI/CD for IaC 
       | OASE
     - 2.5.Y
     - | CI/CD for IaC 
       | OASE
     - バージョン差分あり
     - 〇
     - 
   * - D
     - 2.5.X
     - | CI/CD for IaC 
       | 
     - 2.5.Y
     - | CI/CD for IaC 
       | OASE
     - | バージョン差分あり(A:2.5.X < B:2.5.Y)
       | ドライバ差分あり
     - 〇
     - 
   * - E
     - 2.5.X
     - | CI/CD for IaC 
       | OASE
     - 2.5.X
     - | CI/CD for IaC 
       | 
     - ドライバ差分あり
     - △※
     - 
   * - F
     - 2.5.X
     - | CI/CD for IaC 
       | OASE
     - 2.5.Y
     - | CI/CD for IaC 
       | 
     - | バージョン差分あり(A:2.5.X < B:2.5.Y)
       | ドライバ差分あり
     - △※
     - 
   * - G
     - 2.5.Y
     - | CI/CD for IaC 
       | OASE
     - 2.5.X
     - | CI/CD for IaC 
       | OASE
     - | バージョン差分あり(A:2.5.Y > B:2.5.X)
     - ×
     - 
   * - H
     - 2.5.Y
     - | CI/CD for IaC 
       | 
     - 2.5.X
     - | CI/CD for IaC 
       | OASE
     - | バージョン差分あり(A:2.5.Y > B:2.5.X)
       | ドライバ差分あり
     - ×
     - 
   * - I
     - 2.5.Y
     - | CI/CD for IaC 
       | OASE
     - 2.5.X
     - | CI/CD for IaC 
       | 
     - | バージョン差分あり(A:2.5.Y > B:2.5.X)
       | ドライバ差分あり
     - ×
     - 

.. tabs::

   .. tab:: ケースA（インポート可）

      .. figure:: /images/ja/export_import/export_import_ptn_A.drawio.png
         :alt: エクスポート・インポート(ケースA)
         :align: center
         :width: 800px

   .. tab:: ケースB（インポート可）

      .. figure:: /images/ja/export_import/export_import_ptn_B.drawio.png
         :alt: エクスポート・インポート(ケースB)
         :align: center
         :width: 800px

   .. tab:: ケースC（インポート可）

      .. figure:: /images/ja/export_import/export_import_ptn_C.drawio.png
         :alt: エクスポート・インポート(ケースC)
         :align: center
         :width: 800px
      
   .. tab:: ケースD（インポート可）

      .. figure:: /images/ja/export_import/export_import_ptn_D.drawio.png
         :alt: エクスポート・インポート(ケースD)
         :align: center
         :width: 800px
   .. tab:: ケースE（インポート可※）

      .. figure:: /images/ja/export_import/export_import_ptn_E.drawio.png
         :alt: エクスポート・インポート(ケースE)
         :align: center
         :width: 800px

      .. warning:: | ドライバのインストール・アンインストール機能（ :ref:`organization_edit` ）を使用して、
         | ドライバのインストール状態を揃え、「ケースA」や「ケースB」の状態にすることで、インポートの実施が可能です。

   .. tab:: ケースF（インポート可※）

      .. figure:: /images/ja/export_import/export_import_ptn_F.drawio.png
         :alt: エクスポート・インポート(ケースF)
         :align: center
         :width: 800px    

      .. warning:: | ドライバのインストール・アンインストール機能（ :ref:`organization_edit` ）を使用して、
         | ドライバのインストール状態を揃え、「ケースC」や「ケースD」の状態にすることで、インポートの実施が可能です。      
         

   .. tab:: ケースG（インポート不可）

      .. figure:: /images/ja/export_import/export_import_ptn_G.drawio.png
         :alt: エクスポート・インポート(ケースG)
         :align: center
         :width: 800px    

   .. tab:: ケースH（インポート不可）

      .. figure:: /images/ja/export_import/export_import_ptn_H.drawio.png
         :alt: エクスポート・インポート(ケースH)
         :align: center
         :width: 800px    
         
   .. tab:: ケースI（インポート不可）

      .. figure:: /images/ja/export_import/export_import_ptn_I.drawio.png
         :alt: エクスポート・インポート(ケースI)
         :align: center
         :width: 800px    


メニューエクスポート・インポートのメニュー、画面構成
====================================================

| 本章では、メニューエクスポート・インポートのメニュー、画面構成について説明します

メニュー 一覧
-------------

| メニューエクスポート・インポートのメニューを以下に示します。

.. table:: ITAメニュー一覧
   :align: left

   +--------+----------------------+--------------------+------------------+
   | **No** | **メニューグループ** | **メニュー・画面** | **説明**         |
   +========+======================+====================+==================+
   | 1      | エクスポート・インポ\| メニューエクスポー\| メニューのデー\  |
   |        | ート                 | ト                 | タをエクスポー\  |
   |        |                      |                    | トします。       |
   +--------+                      +--------------------+------------------+
   | 2      |                      | メニューインポート | メニューの\      |
   |        |                      |                    | データをイ\      |
   |        |                      |                    | ンポートし\      |
   |        |                      |                    | ます。           |
   +--------+                      +--------------------+------------------+
   | 3      |                      | メニューエクスポー\| [メニューエクス\ |
   |        |                      | ト・インポート管理 | ポート]メニュー\ |
   |        |                      |                    | で実行したエク\  |
   |        |                      |                    | スポートと、[メ\ |
   |        |                      |                    | ニューインポー\  |
   |        |                      |                    | ト]メニューで実\ |
   |        |                      |                    | 行したインポー\  |
   |        |                      |                    | トの状況を管理\  |
   |        |                      |                    | します。         |
   +--------+----------------------+--------------------+------------------+


機能・操作方法説明
==================

メニューエクスポート
--------------------

| ITAシステムに登録されているデータを、メニューごとにエクスポートします。

.. note::
   | データを別のITA環境に移す場合、すべてのメニューを対象に移動しないとデータの整合性が壊れる可能性があります。

| 一部エクスポート対象外のメニューが存在します。対象外のメニューは以下の通りです。

.. table::
   :align: left

   +--------+--------------------------+-------------------------------------------------------+
   | **No** | **メニューグループ**     | **メニュー・画面**                                    |
   +========+==========================+=======================================================+
   | 1      | エクスポート・インポート | メニューエクスポート                                  |
   +--------+                          +-------------------------------------------------------+
   | 2      |                          | メニューインポート                                    |
   +--------+                          +-------------------------------------------------------+
   | 3      |                          | メニューエクスポート・インポート管理                  |
   +--------+                          +-------------------------------------------------------+
   | 4      |                          | Excel 一括エクスポート                                |
   +--------+                          +-------------------------------------------------------+
   | 5      |                          | Excel 一括インポート                                  |
   +--------+                          +-------------------------------------------------------+
   | 6      |                          | Excel 一括エクスポート・インポート管理                |
   +--------+--------------------------+-------------------------------------------------------+
   | 7      | Conductor                | Conductor編集/作業実行                                |
   +--------+                          +-------------------------------------------------------+
   | 8      |                          | Conductor作業履歴                                     |
   +--------+                          +-------------------------------------------------------+
   | 9      |                          | Conductor作業確認                                     |
   +--------+                          +-------------------------------------------------------+
   | 10     |                          | Conductorインスタンス一覧                             |
   +--------+                          +-------------------------------------------------------+
   | 11     |                          | ConductorNodeインスタンス一覧                         |
   +--------+--------------------------+-------------------------------------------------------+
   | 12     | パラメータシート作成     | パラメータシート定義・作成                            |
   +--------+                          +-------------------------------------------------------+
   | 13     |                          | パラメータシート作成履歴                              |
   +--------+                          +-------------------------------------------------------+
   | 14     |                          | 選択1                                                 |
   +--------+                          +-------------------------------------------------------+
   | 15     |                          | 選択2                                                 |
   +--------+--------------------------+-------------------------------------------------------+
   | 16     | 比較                     | 比較実行                                              |
   +--------+--------------------------+-------------------------------------------------------+
   | 17     | Ansible-Legacy           | 作業対象ホスト                                        |
   +--------+                          +-------------------------------------------------------+
   | 18     |                          | 代入値管理                                            |
   +--------+                          +-------------------------------------------------------+
   | 19     |                          | 作業実行                                              |
   +--------+                          +-------------------------------------------------------+
   | 20     |                          | 作業状態確認                                          |
   +--------+                          +-------------------------------------------------------+
   | 21     |                          | 作業管理                                              |
   +--------+--------------------------+-------------------------------------------------------+
   | 22     | Ansible-Pioneer          | 作業対象ホスト                                        |
   +--------+                          +-------------------------------------------------------+
   | 23     |                          | 代入値管理                                            |
   +--------+                          +-------------------------------------------------------+
   | 24     |                          | 作業実行                                              |
   +--------+                          +-------------------------------------------------------+
   | 25     |                          | 作業状態確認                                          |
   +--------+                          +-------------------------------------------------------+
   | 26     |                          | 作業管理                                              |
   +--------+--------------------------+-------------------------------------------------------+
   | 27     | Ansible-LegacyRole       | 作業対象ホスト                                        |
   +--------+                          +-------------------------------------------------------+
   | 28     |                          | 代入値管理                                            |
   +--------+                          +-------------------------------------------------------+
   | 29     |                          | 作業実行                                              |
   +--------+                          +-------------------------------------------------------+
   | 30     |                          | 作業状態確認                                          |
   +--------+                          +-------------------------------------------------------+
   | 31     |                          | 作業管理                                              |
   +--------+--------------------------+-------------------------------------------------------+
   | 32     | Terraform-Cloud/EP       | 作業実行                                              |
   +--------+                          +-------------------------------------------------------+
   | 33     |                          | 作業状態確認                                          |
   +--------+                          +-------------------------------------------------------+
   | 34     |                          | 作業確認                                              |
   +--------+                          +-------------------------------------------------------+
   | 35     |                          | 代入値管理                                            |
   +--------+                          +-------------------------------------------------------+
   | 36     |                          | 連携先Terraform管理                                   |
   +--------+--------------------------+-------------------------------------------------------+
   | 37     | Terraform-CLI            | 作業実行                                              |
   +--------+                          +-------------------------------------------------------+
   | 38     |                          | 作業状態確認                                          |
   +--------+                          +-------------------------------------------------------+
   | 39     |                          | 作業管理                                              |
   +--------+                          +-------------------------------------------------------+
   | 40     |                          | 代入値管理                                            |
   +--------+--------------------------+-------------------------------------------------------+

| (1) エクスポートするモードと廃止情報を選択します。
| モード一覧と廃止情報一覧を以下に示します。

.. table:: モード一覧
   :align: left

   +----------+----------------------------------------------------------+
   | **名称** | **説明**                                                 |
   +==========+==========================================================+
   | 環境移行 | インポ\                                                  |
   |          | ート時、既存データをすべて削除してデータを上書きします。 |
   +----------+----------------------------------------------------------+
   | 時刻指定 | インポート時、指定した時刻以降に入力されたデータを各\    |
   |          | メニューの一意項目（ID、No等）を基に挿入・上書きします。 |
   +----------+----------------------------------------------------------+


.. table:: 廃止情報一覧
   :align: left

   +------------+------------------------------------------------------------+
   | **名称**   | **説明**                                                   |
   +============+============================================================+
   | 廃止を含む | 廃止状態のデータを含むすべてのデータをエクスポートします。 |
   +------------+------------------------------------------------------------+
   | 廃止を除く | 廃止状態のデータを除いたデータをエクスポートします。       |
   +------------+------------------------------------------------------------+


.. list-table:: 履歴
   :header-rows: 1
   :align: left

   * - No
     - メニュー・画面
     - 説明
   * - 1
     - 履歴あり
     - 履歴のレコードを含めてエクスポートします。
   * - 2
     - 履歴なし
     - 履歴のレコードを含めずにエクスポートします。


| (2) エクスポートするメニューを選択して《エクスポート》ボタンを押下します。

.. figure:: /images/ja/export_import/overview/menu_export_1_v2-5.drawio.png
   :width: 1000px
   :alt: メニューエクスポート画面(1)
   :align: center

   メニューエクスポート画面(1)

.. note::
   | 初回の環境移行や新しくパラメータシート作成でメニューを作成した場合は下記のメニューをエクスポート対象に含むようにしてください。
   | 含まないでエクスポート・インポートした場合、インポート時に完了（異常）になります。
   | ・メニュー管理
   | ・メニュー-テーブル紐付管理
   | ・メニュー-カラム紐付管理
   | ・ロール-メニュー紐付管理

| (3) エクスポート確認のポップアップ画面が表示されますので、内容を確認して《エクスポート開始》ボタンを押下します。

.. figure:: /images/ja/export_import/overview/menu_export_2_v2-5.drawio.png
   :width: 1000px
   :alt: メニューエクスポート画面(2)
   :align: center

   メニューエクスポート画面(2)

| (4) メニューを選択後、《エクスポート》ボタンを押下します。
| 自動でメニューエクスポート・インポート管理画面に遷移するのでエクスポート処理のステータスを確認してください。

.. figure:: /images/ja/export_import/overview/menu_export_3.png
   :width: 1000px
   :alt: メニューエクスポート・インポート管理画面
   :align: center

   メニューエクスポート・インポート管理画面


.. _menu_import:

メニューインポート
------------------

| [メニューエクスポート]メニューでエクスポートしたデータをインポートします。

| (1) 《ファイル選択》ボタンを押下して、インポートするファイルを選択し、《開く》ボタンを押下します。

.. figure:: /images/ja/export_import/overview/menu_import_1.png
   :width: 1000px
   :alt: メニューインポート画面(1)
   :align: center

   メニューインポート画面(1)

.. figure:: /images/ja/export_import/overview/menu_import_2.png
   :width: 1000px
   :alt: メニューインポート画面(2)
   :align: center

   メニューインポート画面(2)

| (2) インポートしたファイル内のメニューの一覧が表示されます。インポートするメニューを選択して《インポート》ボタンを押下します。
| チェックボックスがチェックされているメニューがインポート対象となります。
| インポートする必要がないメニューは、チェックは外してください。

.. figure:: /images/ja/export_import/overview/menu_import_3_v2-5.drawio.png
   :width: 1000px
   :alt: メニューインポート画面(3)
   :align: center

   メニューインポート画面(3)

| (3) インポート確認のポップアップ画面が表示されますので、内容を確認して《インポート開始》ボタンを押下します。

.. figure:: /images/ja/export_import/overview/menu_import_4_v2-5.drawio.png
   :width: 1000px
   :alt: メニューインポート画面(4)
   :align: center

   メニューインポート画面(4)

| (4) 自動で[メニューエクスポート・インポート管理]に遷移するのでインポートの状況確認が行えます。

.. warning::
   | インポートのステータスが「実行中」の時にすぐに他の操作（画面の更新、他のメニューへの遷移など）を行うと
   | データ入れ替えのためタイミングによってはシステムエラーになる可能性がありますので少し時間を置いてから操作をするようにしてください。

.. figure:: /images/ja/export_import/overview/menu_import_5.png
   :width: 1000px
   :alt: メニューエクスポート・インポート管理画面
   :align: center

   メニューエクスポート・インポート管理画面

メニューエクスポート・インポート管理
------------------------------------

| [メニューエクスポート]メニューで実行したエクスポートと、[メニューインポート]メニューで実行したインポートの状況を管理します。

.. figure:: /images/ja/export_import/overview/menu_export_import_1_v2-5.drawio.png
   :width: 1000px
   :alt: メニューエクスポート・インポート管理画面
   :align: center

   メニューエクスポート・インポート管理画面

.. table::  一覧画面項目一覧（メニューエクスポート・インポート管理）
   :align: left

   +------------+--------------------------------------------------------------------------------------------------------------+
   | **項目**   | **説明**                                                                                                     |
   +============+==============================================================================================================+
   | 実行No.    | 一意のIDが自動採番されます                                                                                   |
   +------------+--------------------------------------------------------------------------------------------------------------+
   | ステータス | | 〔未実行〕、〔実行中〕、〔完了〕の順に遷移します。                                                         |
   |            |                                                                                                              |
   |            | | エラーが発生した場合は、〔完了(異常)〕になります。                                                         |
   |            |                                                                                                              |
   |            | | インポート時に〔完了(異常)〕になった場合はロールバックを実施し、データをインポート前の状態に戻します。     |
   +------------+--------------------------------------------------------------------------------------------------------------+
   | 処理種別   | | エクスポート・・・メニューエクスポート                                                                     |
   |            | | インポート・・・メニューインポート                                                                         |
   +------------+--------------------------------------------------------------------------------------------------------------+
   | モード     | 〔環境移行〕または〔時刻指定〕が表示されます。                                                               |
   +------------+--------------------------------------------------------------------------------------------------------------+
   | 廃止情報   | 〔廃止を含む〕または〔廃止を除く〕が表示されます。                                                           |
   +------------+--------------------------------------------------------------------------------------------------------------+
   | 履歴情報   | 〔履歴あり〕または〔履歴なし〕が表示されます。                                                               |
   +------------+--------------------------------------------------------------------------------------------------------------+
   | 指定時刻   | モードが〔時刻指定〕の場合にのみ表示されます。                                                               |
   +------------+--------------------------------------------------------------------------------------------------------------+
   | ファイル名 | | エクスポートの場合、〔完了〕になるとエクスポートデータが表示されるので、ダウンロードして使用してください。 |
   |            |                                                                                                              |
   |            | | インポートの場合、インポートしたデータが表示されます。                                                     |
   +------------+--------------------------------------------------------------------------------------------------------------+
   | 実行ユーザ | | エクスポート処理またはインポート処理を実行したユーザが表示されます。                                       |
   +------------+--------------------------------------------------------------------------------------------------------------+
   | 言語       | | インポート実行時のログインユーザーの言語情報が表示されます。                                               |
   |            | | 自動登録のため編集不可となります。                                                                         |
   +------------+--------------------------------------------------------------------------------------------------------------+
   | 実行ログ   | | エクスポート処理またはインポート処理時の、ステータスが「完了（異常）」の場合に                             |
   |            | | ログファイルのリンクが表示されます。                                                                       |
   +------------+--------------------------------------------------------------------------------------------------------------+


.. note:: 
   | :menuselection:`メニューエクスポート・インポート管理` で、:menuselection:`ステータス` が「完了 (異常)」となった場合、:menuselection:`実行ログ` にファイルのリンクが表示されます。

   .. figure:: /images/ja/export_import/overview/menu_export_import_2_v2-4.drawio.png
      :width: 1000px
      :alt: メニューエクスポート・インポート管理画面：完了 (異常)
      :align: center

      メニューエクスポート・インポート管理画面：完了 (異常)

   .. code-block:: bash
     :caption: 例：KYMファイル内の構成に不備がある場合の実行ログについて

     # import_9ceea0bd-b193-4245-b1e5-a2d3e93b8e49.log
     KYMファイル内に該当ファイルがありません。(T_COMN_MENU_TABLE_LINK_DATA)
